--- a/MBEEffectDemo/Inspectors/FogParameterInspectorView.xib
+++ b/MBEEffectDemo/Inspectors/FogParameterInspectorView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24128" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24128"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="FogParameterInspectorView" customModule="MBEEffectDemo" customModuleProvider="target">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="FogParameterInspectorView" customModule="MBEBaseEffectDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="256" height="147"/>
             <subviews>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F0Z-R2-ihA">
@@ -21,7 +22,7 @@
                         <action selector="disclosureButtonValueDidChange:" target="c22-O7-iKe" id="ex4-2k-XqY"/>
                     </connections>
                 </button>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="P0V-Yn-wlG">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="P0V-Yn-wlG">
                     <rect key="frame" x="20" y="128" width="25" height="14"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Fog" id="OmR-S8-VX9">
                         <font key="font" metaFont="systemSemibold" size="11"/>
@@ -29,11 +30,11 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="MkK-1G-ELZ">
+                <customView clipsToBounds="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MkK-1G-ELZ">
                     <rect key="frame" x="0.0" y="0.0" width="256" height="127"/>
                     <subviews>
                         <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8xa-J5-WXU">
-                            <rect key="frame" x="85" y="99" width="154" height="16"/>
+                            <rect key="frame" x="87" y="100" width="149" height="16"/>
                             <popUpButtonCell key="cell" type="push" title="Exponential" bezelStyle="rounded" alignment="left" controlSize="mini" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="GjA-I6-ciQ" id="HxU-NZ-NhV">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="miniSystem"/>
@@ -49,7 +50,7 @@
                                 <action selector="modeButtonValueDidChange:" target="c22-O7-iKe" id="g09-cq-nfg"/>
                             </connections>
                         </popUpButton>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cWs-Yk-Add">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cWs-Yk-Add">
                             <rect key="frame" x="6" y="101" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="3fQ-Tr-rsT"/>
@@ -60,7 +61,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PyN-Fh-7i0">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PyN-Fh-7i0">
                             <rect key="frame" x="6" y="23" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="pVx-MJ-mEB"/>
@@ -71,8 +72,8 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W0h-9I-QjT">
-                            <rect key="frame" x="87" y="22" width="68" height="19"/>
+                        <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W0h-9I-QjT">
+                            <rect key="frame" x="87" y="15" width="68" height="22"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="right" title="0.0" drawsBackground="YES" id="vaT-UI-2qZ">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -82,15 +83,15 @@
                                 <action selector="fogStartDistanceFieldValueDidChange:" target="c22-O7-iKe" id="lF3-Nt-Ujs"/>
                             </connections>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3RP-PF-eZG">
-                            <rect key="frame" x="105" y="8" width="31" height="13"/>
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3RP-PF-eZG">
+                            <rect key="frame" x="105" y="1" width="31" height="13"/>
                             <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" alignment="center" title="start" id="jCm-Tt-gnJ">
                                 <font key="font" metaFont="system" size="10"/>
                                 <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XNr-Rv-JbT">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XNr-Rv-JbT">
                             <rect key="frame" x="6" y="49" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="cdF-fr-URA"/>
@@ -101,8 +102,8 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KaT-8J-AqA">
-                            <rect key="frame" x="87" y="49" width="68" height="19"/>
+                        <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KaT-8J-AqA">
+                            <rect key="frame" x="87" y="45" width="68" height="22"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="68" id="bnr-9p-AIH"/>
                             </constraints>
@@ -115,7 +116,7 @@
                                 <action selector="fogDensityTextFieldValueDidChange:" target="c22-O7-iKe" id="1xT-Iy-63j"/>
                             </connections>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qDe-wQ-e4c">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qDe-wQ-e4c">
                             <rect key="frame" x="6" y="76" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="4kd-ku-BFd"/>
@@ -127,7 +128,7 @@
                             </textFieldCell>
                         </textField>
                         <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="kXs-Pa-Rvh">
-                            <rect key="frame" x="87" y="75" width="149" height="18"/>
+                            <rect key="frame" x="87" y="74" width="149" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="dPF-pe-kW5"/>
                             </constraints>
@@ -136,8 +137,8 @@
                                 <action selector="fogColorWellValueDidChange:" target="c22-O7-iKe" id="wtN-iJ-jgR"/>
                             </connections>
                         </colorWell>
-                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vaD-cb-gM2">
-                            <rect key="frame" x="162" y="22" width="73" height="19"/>
+                        <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vaD-cb-gM2">
+                            <rect key="frame" x="162" y="15" width="73" height="22"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="right" title="1.0" drawsBackground="YES" id="lJU-tD-JEU">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -147,8 +148,8 @@
                                 <action selector="fogEndDistanceFieldValueDidChange:" target="c22-O7-iKe" id="7wy-EN-yAi"/>
                             </connections>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eNr-4t-pC3">
-                            <rect key="frame" x="185" y="9" width="27" height="13"/>
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eNr-4t-pC3">
+                            <rect key="frame" x="185" y="2" width="27" height="13"/>
                             <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" alignment="center" title="end" id="3Wy-L4-8TA">
                                 <font key="font" metaFont="system" size="10"/>
                                 <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -187,7 +188,7 @@
                     </constraints>
                 </customView>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jXQ-yH-YYc">
-                    <rect key="frame" x="187" y="129" width="54" height="11"/>
+                    <rect key="frame" x="190" y="119" width="51" height="22"/>
                     <buttonCell key="cell" type="check" title="Enabled" bezelStyle="regularSquare" imagePosition="left" controlSize="mini" state="on" inset="2" id="rM2-TC-k9U">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="miniSystem"/>
@@ -210,6 +211,7 @@
                 <constraint firstItem="MkK-1G-ELZ" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="20" symbolic="YES" id="ntN-ry-0bQ"/>
             </constraints>
             <connections>
+                <outlet property="containerView" destination="MkK-1G-ELZ" id="Y0I-c3-CGG"/>
                 <outlet property="disclosureButton" destination="F0Z-R2-ihA" id="g50-fZ-jKf"/>
                 <outlet property="enabledButton" destination="jXQ-yH-YYc" id="dx6-YJ-M1f"/>
                 <outlet property="fogColorWell" destination="kXs-Pa-Rvh" id="Jmc-kY-ESm"/>
