--- a/MBEEffectDemo/Inspectors/MaterialInspectorView.xib
+++ b/MBEEffectDemo/Inspectors/MaterialInspectorView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24128" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24128"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="MaterialInspectorView" customModule="MBEEffectDemo" customModuleProvider="target">
+        <customView clipsToBounds="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="MaterialInspectorView" customModule="MBEBaseEffectDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="258" height="152"/>
             <subviews>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="D9e-d9-laq">
@@ -24,7 +25,7 @@
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="Jwf-I6-1ax">
                     <rect key="frame" x="0.0" y="0.0" width="258" height="132"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cAL-zk-0nN">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cAL-zk-0nN">
                             <rect key="frame" x="8" y="111" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="zB6-Tb-Ye3"/>
@@ -35,7 +36,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="amc-Yw-w3B">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="amc-Yw-w3B">
                             <rect key="frame" x="8" y="85" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="iwa-iE-NjU"/>
@@ -46,7 +47,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NC6-8A-cgX">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NC6-8A-cgX">
                             <rect key="frame" x="8" y="59" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="qEV-I6-xkY"/>
@@ -57,7 +58,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ATu-XB-QW9">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ATu-XB-QW9">
                             <rect key="frame" x="8" y="33" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="cZE-oM-g2s"/>
@@ -68,7 +69,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8Vc-g3-xSM">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8Vc-g3-xSM">
                             <rect key="frame" x="8" y="11" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="c9C-pk-knA"/>
@@ -120,7 +121,7 @@
                             </connections>
                         </colorWell>
                         <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HCn-pz-QdP">
-                            <rect key="frame" x="87" y="9" width="153" height="17"/>
+                            <rect key="frame" x="89" y="12" width="149" height="12"/>
                             <sliderCell key="cell" controlSize="mini" continuous="YES" state="on" alignment="left" maxValue="1" tickMarkPosition="above" sliderType="linear" id="cHQ-MR-Zau"/>
                             <connections>
                                 <action selector="shininessValueDidChange:" target="c22-O7-iKe" id="hTQ-Z7-h2l"/>
@@ -155,7 +156,7 @@
                         <constraint firstItem="amc-Yw-w3B" firstAttribute="centerY" secondItem="Ewf-rL-tWT" secondAttribute="centerY" id="v41-XM-hhT"/>
                     </constraints>
                 </customView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IH7-wL-ege">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IH7-wL-ege">
                     <rect key="frame" x="20" y="133" width="49" height="14"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Material" id="dhJ-Tv-idx">
                         <font key="font" metaFont="systemSemibold" size="11"/>
@@ -176,6 +177,7 @@
             </constraints>
             <connections>
                 <outlet property="ambientColorWell" destination="DHK-Ez-865" id="ClL-UO-cJp"/>
+                <outlet property="containerView" destination="Jwf-I6-1ax" id="VIr-gU-hFi"/>
                 <outlet property="diffuseColorWell" destination="Ewf-rL-tWT" id="gwx-So-GBt"/>
                 <outlet property="disclosureButton" destination="D9e-d9-laq" id="gu6-kN-f27"/>
                 <outlet property="emissiveColorWell" destination="m9i-K4-fa8" id="a6A-TB-kf3"/>
