--- a/MBEEffectDemo/Inspectors/ShadingInspectorView.xib
+++ b/MBEEffectDemo/Inspectors/ShadingInspectorView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24128" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24128"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="ShadingInspectorView" customModule="MBEEffectDemo" customModuleProvider="target">
+        <customView clipsToBounds="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="ShadingInspectorView" customModule="MBEBaseEffectDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="248" height="125"/>
             <subviews>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="D9e-d9-laq">
@@ -24,7 +25,7 @@
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="Jwf-I6-1ax">
                     <rect key="frame" x="0.0" y="0.0" width="248" height="105"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="amc-Yw-w3B">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="amc-Yw-w3B">
                             <rect key="frame" x="18" y="81" width="79" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="75" id="y8r-Wt-xS3"/>
@@ -36,7 +37,7 @@
                             </textFieldCell>
                         </textField>
                         <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W61-Nj-owZ">
-                            <rect key="frame" x="100" y="79" width="129" height="16"/>
+                            <rect key="frame" x="102" y="80" width="124" height="16"/>
                             <popUpButtonCell key="cell" type="push" title="Per-vertex" bezelStyle="rounded" alignment="left" controlSize="mini" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="TRr-ZD-ynR" id="Abv-NX-FJh">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="miniSystem"/>
@@ -52,7 +53,7 @@
                             </connections>
                         </popUpButton>
                         <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WTZ-ow-2qS">
-                            <rect key="frame" x="102" y="62" width="124" height="11"/>
+                            <rect key="frame" x="102" y="60" width="124" height="12"/>
                             <buttonCell key="cell" type="check" title="Two-Sided Lighting" bezelStyle="regularSquare" imagePosition="left" controlSize="mini" state="on" inset="2" id="AhW-TQ-g06">
                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="miniSystem"/>
@@ -61,7 +62,7 @@
                                 <action selector="twoSidedLightingValueDidChange:" target="c22-O7-iKe" id="bIm-g7-gw5"/>
                             </connections>
                         </button>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cAL-zk-0nN">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cAL-zk-0nN">
                             <rect key="frame" x="18" y="38" width="79" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="75" id="Hzy-IO-DWN"/>
@@ -72,7 +73,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NC6-8A-cgX">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NC6-8A-cgX">
                             <rect key="frame" x="18" y="12" width="79" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="75" id="ear-4D-DtV"/>
@@ -93,7 +94,7 @@
                                 <action selector="ambientColorWellValueDidChange:" target="c22-O7-iKe" id="57y-MM-eP9"/>
                             </connections>
                         </colorWell>
-                        <colorWell translatesAutoresizingMaskIntoConstraints="NO" id="lne-kP-bLL">
+                        <colorWell ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lne-kP-bLL">
                             <rect key="frame" x="102" y="10" width="57" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="dgu-3q-LRp"/>
@@ -103,8 +104,8 @@
                                 <action selector="constantColorWellValueDidChange:" target="c22-O7-iKe" id="8kv-cp-GcR"/>
                             </connections>
                         </colorWell>
-                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QYU-Rr-NoO">
-                            <rect key="frame" x="174" y="13" width="54" height="11"/>
+                        <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QYU-Rr-NoO">
+                            <rect key="frame" x="174" y="3" width="54" height="22"/>
                             <buttonCell key="cell" type="check" title="Enabled" bezelStyle="regularSquare" imagePosition="left" controlSize="mini" state="on" inset="2" id="s07-ZF-OrM">
                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="miniSystem"/>
@@ -137,7 +138,7 @@
                         <constraint firstItem="NC6-8A-cgX" firstAttribute="firstBaseline" secondItem="cAL-zk-0nN" secondAttribute="baseline" constant="26" id="x0i-t9-SEy"/>
                     </constraints>
                 </customView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IH7-wL-ege">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IH7-wL-ege">
                     <rect key="frame" x="20" y="106" width="108" height="14"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Lighting &amp; Shading" id="dhJ-Tv-idx">
                         <font key="font" metaFont="systemSemibold" size="11"/>
@@ -160,6 +161,7 @@
                 <outlet property="ambientColorWell" destination="DHK-Ez-865" id="AM9-8T-Jy7"/>
                 <outlet property="constantColorCheckbox" destination="QYU-Rr-NoO" id="LtK-tz-ahH"/>
                 <outlet property="constantColorWell" destination="lne-kP-bLL" id="Lvf-EZ-PFs"/>
+                <outlet property="containerView" destination="Jwf-I6-1ax" id="FQV-ZO-jnu"/>
                 <outlet property="disclosureButton" destination="D9e-d9-laq" id="gu6-kN-f27"/>
                 <outlet property="lightingModePopUpButton" destination="W61-Nj-owZ" id="OuU-6A-niM"/>
                 <outlet property="twoSidedLightingCheckbox" destination="W61-Nj-owZ" id="wLc-TB-mTk"/>
