--- a/MBEEffectDemo/Inspectors/TextureInspectorView.xib
+++ b/MBEEffectDemo/Inspectors/TextureInspectorView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24128" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24128"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="TextureInspectorView" customModule="MBEEffectDemo" customModuleProvider="target">
+        <customView clipsToBounds="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe" customClass="TextureInspectorView" customModule="MBEBaseEffectDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="256" height="108"/>
             <subviews>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cU5-s3-y7n">
@@ -21,7 +22,7 @@
                         <action selector="disclosureButtonValueDidChange:" target="c22-O7-iKe" id="iak-e4-spT"/>
                     </connections>
                 </button>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t6B-nT-gh0">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="t6B-nT-gh0">
                     <rect key="frame" x="21" y="89" width="45" height="14"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Texture" id="OOt-ld-p3H">
                         <font key="font" metaFont="systemSemibold" size="11"/>
@@ -33,7 +34,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="256" height="88"/>
                     <subviews>
                         <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1gZ-N8-93v">
-                            <rect key="frame" x="85" y="60" width="154" height="16"/>
+                            <rect key="frame" x="87" y="61" width="149" height="16"/>
                             <popUpButtonCell key="cell" type="push" title="Replace" bezelStyle="rounded" alignment="left" controlSize="mini" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="aBr-kr-MQo" id="tWx-Jv-o7a">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="miniSystem"/>
@@ -49,7 +50,7 @@
                                 <action selector="textureModeValueDidChange:" target="c22-O7-iKe" id="GPF-8t-BQd"/>
                             </connections>
                         </popUpButton>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YD3-f8-uRw">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YD3-f8-uRw">
                             <rect key="frame" x="6" y="62" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="RUl-Jd-zfe"/>
@@ -60,7 +61,7 @@
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jR9-fG-XlP">
+                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jR9-fG-XlP">
                             <rect key="frame" x="6" y="27" width="75" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="71" id="AOz-ur-Sej"/>
@@ -96,7 +97,7 @@
                     </constraints>
                 </customView>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="heY-eP-5lX">
-                    <rect key="frame" x="187" y="90" width="54" height="11"/>
+                    <rect key="frame" x="190" y="80" width="51" height="22"/>
                     <buttonCell key="cell" type="check" title="Enabled" bezelStyle="regularSquare" imagePosition="left" controlSize="mini" state="on" inset="2" id="azK-Vs-sO4">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="miniSystem"/>
@@ -119,6 +120,7 @@
                 <constraint firstAttribute="bottom" secondItem="Xn9-t5-XXd" secondAttribute="bottom" id="f6C-Uj-h42"/>
             </constraints>
             <connections>
+                <outlet property="containerView" destination="Xn9-t5-XXd" id="ffP-X6-BkY"/>
                 <outlet property="disclosureButton" destination="cU5-s3-y7n" id="Olb-Wh-bHW"/>
                 <outlet property="enabledButton" destination="heY-eP-5lX" id="sdU-ke-aS2"/>
                 <outlet property="textureImageWell" destination="R5e-IR-AHU" id="7MP-9a-yeJ"/>
